sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:2: error: Missing closing brace `}' assumed here
def bubbleSort2() {
^AlgBubbleSort2:2: error: expected class or object definition
def bubbleSort2() {
^AlgBubbleSort2:7: error: expected class or object definition
def bubbleSort()  { var change=true
^